API refinement
